[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/Label.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UIGrid.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -357.0
margin_bottom = -166.0
rect_clip_content = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="GridContainer" instance=ExtResource( 1 )]
margin_right = 237.0
margin_bottom = 62.0
text = "Quit?"

[node name="ButtonResume" parent="GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 237.0
margin_bottom = 134.0
text = "Resume"

[node name="ButtonMenu" parent="GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 138.0
margin_right = 237.0
margin_bottom = 206.0
text = "Main Menu"

[node name="ButtonQuit" parent="GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 237.0
margin_bottom = 278.0
text = "Quit"

[connection signal="pressed" from="GridContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="GridContainer/ButtonMenu" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="GridContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
